Fix label wrapping issues in IE. Closes #788

--- a/app/assets/stylesheets/components/record--descriptions.scss
+++ b/app/assets/stylesheets/components/record--descriptions.scss
@@ -34,7 +34,7 @@
     margin-right: 10px;
     clear: none;
     display: inline-block;
-    white-space: initial;
+    white-space: normal;
     float: left;
     clear: left;
   }
